<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.3">
  <POU Name="P_StationLine1Load" Id="{81c012cc-49e1-4c40-9794-d6c0eeb19afb}" SpecialFunc="None">
    <Declaration><![CDATA[PROGRAM P_StationLine1Load
VAR
	_station:					REFERENCE TO ST_SystemStation;
	_bEnable: 					BOOL;

END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[_station REF= G_arrStation[E_Station.Line1Load];
_station.arrName[E_Language.Chinese]:="线条1上料站";
_station.arrName[E_Language.Vietnamese]:="Dòng trực tuyến";
_bEnable:= NOT GVL.stSetting.arrStationShield[E_Station.Line1Load] AND E_MachineType._367 <> GVL_Data.stRecipe.eMachineType;
GVL.stSetting.arrStationShield[E_Station.Line1Load]:=GVL.stSetting.bManualLoad;

A_Home();
A_Auto();













]]></ST>
    </Implementation>
    <Action Name="A_Auto" Id="{34d00aa1-95b8-481b-9d80-4812412d40d4}">
      <Implementation>
        <ST><![CDATA[CASE _station.iStepNow OF
	1000:
		_station.arrInfo[E_Language.Chinese]:="初始化完成等待启动";
		IF _bEnable  THEN
			_station.iStepNext:=1101;
		END_IF
	1101:
		_station.arrInfo[E_Language.Chinese]:="判断阻挡位是否有料";
		IF GVL.I.bAcquireCheck1 THEN
			_station.iStepNext:=1201;
		END_IF		
	1201:
		_station.arrInfo[E_Language.Chinese]:="接驳线前前阻挡气缸至工作位";	
		IF G_arrFbCylinder[E_Cylinder.AcquirePrevent2].M_WorkRequest() THEN 
			_station.iStepNext:=1301;
		END_IF
	1301:
		_station.arrInfo[E_Language.Chinese]:="接驳线请求接驳站收料";
		GVL.stHandshake.bLine1ToAcquire:=TRUE;
		IF GVL.stHandshake.bAcquireToLine1 THEN
			_station.iStepNext:=1401;
		END_IF
	1401:
		_station.arrInfo[E_Language.Chinese]:="前阻挡气缸缩回";
		IF G_arrFbCylinder[E_Cylinder.AcquirePrevent0].M_HomeRequest() THEN
			_station.iStepNext:=1501;
		END_IF
	1501:		
		_station.arrInfo[E_Language.Chinese]:="等待复位请求信号";
		IF NOT GVL.stHandshake.bAcquireToLine1 THEN
			GVL.stHandshake.bLine1ToAcquire:=FALSE;
			_station.iStepNext:=1601;
		END_IF
	1601:		
		_station.arrInfo[E_Language.Chinese]:="前阻挡气缸伸出";
		IF G_arrFbCylinder[E_Cylinder.AcquirePrevent0].M_WorkRequest() THEN
				_station.iStepNext:=1701;
		END_IF	
	1701:		
		_station.arrInfo[E_Language.Chinese]:="前前阻挡气缸缩回";
		IF G_arrFbCylinder[E_Cylinder.AcquirePrevent2].M_HomeRequest() THEN
			_station.iStepNext:=1101;
		END_IF
	
END_CASE]]></ST>
      </Implementation>
    </Action>
    <Action Name="A_Home" Id="{be9e992f-2506-49b7-a99a-8d4e2bc86490}">
      <Implementation>
        <ST><![CDATA[CASE _station.iStepNow OF
	0:
		_station.arrInfo[E_Language.Chinese]:="等待初始化";
		_station.iStepNext:=SEL(_bEnable,1000,100);
	100:
		_station.arrInfo[E_Language.Chinese]:="阻挡气缸伸出";
		IF  G_arrFbCylinder[E_Cylinder.AcquirePrevent0].M_WorkRequest() THEN
			_station.iStepNext:=200;
		END_IF
	200:
		_station.arrInfo[E_Language.Chinese]:="分料气缸缩回";
		IF  G_arrFbCylinder[E_Cylinder.AcquirePrevent2].M_HomeRequest() THEN
			_station.iStepNext:=1000;
		END_IF
END_CASE]]></ST>
      </Implementation>
    </Action>
    <LineIds Name="P_StationLine1Load">
      <LineId Id="25" Count="4" />
      <LineId Id="31" Count="1" />
      <LineId Id="11" Count="13" />
      <LineId Id="5" Count="0" />
    </LineIds>
    <LineIds Name="P_StationLine1Load.A_Auto">
      <LineId Id="2" Count="11" />
      <LineId Id="60" Count="2" />
      <LineId Id="17" Count="2" />
      <LineId Id="105" Count="0" />
      <LineId Id="20" Count="0" />
      <LineId Id="22" Count="2" />
      <LineId Id="63" Count="2" />
      <LineId Id="28" Count="0" />
      <LineId Id="81" Count="0" />
      <LineId Id="101" Count="3" />
      <LineId Id="66" Count="1" />
      <LineId Id="82" Count="1" />
      <LineId Id="87" Count="0" />
      <LineId Id="68" Count="0" />
      <LineId Id="71" Count="0" />
      <LineId Id="98" Count="2" />
      <LineId Id="72" Count="0" />
      <LineId Id="59" Count="0" />
      <LineId Id="1" Count="0" />
    </LineIds>
    <LineIds Name="P_StationLine1Load.A_Home">
      <LineId Id="2" Count="2" />
      <LineId Id="7" Count="10" />
      <LineId Id="1" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>